--- a/actionflows/actionflows.html
+++ b/actionflows/actionflows.html
@@ -9,7 +9,7 @@
       name: {value: "action"},
       prop: {value: "loop"},
       untilprop: {value: 1},
-      until: {value: "lt"},
+      until: {value: "gt"},
       loop: {value: "none"},
       perf: {value: false}
 		},
@@ -24,6 +24,11 @@
     },
     paletteLabel: "action",
 		label: function() {
+      if (this.loop == "none") {
+        this._def.icon='actionflows.png';
+      }else{
+        this._def.icon='loopflow.png';
+      }
 			return this.name||"action";
 		},
     labelStyle: function() {
@@ -33,8 +38,7 @@
         return (this.name?"# "+this.name+"\n":"")+(this.info||"");
     },
     oneditprepare: function() {
-      var node = this;
-      node.editor = RED.editor.createEditor({
+      this.editor = RED.editor.createEditor({
           id: 'node-description-editor',
           mode: 'ace/mode/markdown',
           value: $("#node-input-info").val()
@@ -67,16 +71,10 @@
       }, 1);
     },
     oneditsave: function() {
+      var node = this;
       $("#node-input-info").val(this.editor.getValue());
       this.editor.destroy();
-      delete this.editor;
-
-      // Support looping
-      if ($("#node-input-loop").val() == "none") {
-        this._def.icon='actionflows.png';
-      }else{
-        this._def.icon='loopflow.png';
-      }
+      delete node.editor;
     },
     oneditcancel: function() {
       this.editor.destroy();
@@ -140,9 +138,9 @@
         <select id="node-input-loop" style="width:26%; margin-right:10px;">
           <option value="none">none</option>
           <option value="watch">watch</option>
-          <option value="decrement">decrement</option>
-          <option value="increment">increment</option>
-          <option value="incfromzero">inc. from zero</option>
+          <option value="dec">decrement</option>
+          <option value="inc">increment</option>
+          <option value="inc0">inc. from zero</option>
         </select>
         <div class="af-loop" style="display:inline;">
           <input type="text" id="node-input-prop" style="width:40%;">
