--- a/actionflows/actionflows.html
+++ b/actionflows/actionflows.html
@@ -149,7 +149,7 @@
     </div>
     <div class="form-row af-loop">
       <label style="text-align:right;"><span style="margin-right:3px;">Until</span></label>
-      <select id="node-input-until" style="width:20%; margin-right:10px;">
+      <select id="node-input-until" style="width:26%; margin-right:10px;">
         <option value="eq">==</option>
         <option value="neq">!=</option>
         <option value="lt">&lt;</option>
@@ -157,8 +157,9 @@
         <option value="gt">&gt;</option>
         <option value="gte">&gt;=</option>
         <option value="cont">contains</option>
+        <option value="notc">not contains</option>
       </select>
-      <input type="text" id="node-input-untilprop" style="width:46%;">
+      <input type="text" id="node-input-untilprop" style="width:40%;">
       <input type="hidden" id="node-input-untilproptype"><br/>
     </div>
     <div class="form-row" style="margin-bottom: 0px;">
