Support for loops and inc from zero

--- a/actionflows/actionflows.html
+++ b/actionflows/actionflows.html
@@ -8,7 +8,7 @@
       proptype: {value: "msg"},
       name: {value: "action"},
       prop: {value: "loop"},
-      untilprop: {value: 1},
+      untilprop: {value: 0},
       until: {value: "gt"},
       loop: {value: "none"},
       perf: {value: false}
@@ -173,7 +173,7 @@
     <div class="form-row" id="node-loop-perf">
         <input type="checkbox" id="node-input-perf" style="display: inline-block; width: auto; vertical-align: top;">
         <label for="node-input-perf" style="width: 70%;">
-          <span>Debug execution time?</span>
+          <span>Debug action cycle execution time?</span>
         </label>
     </div>
 </script>
