--- a/actionflows/actionflows.html
+++ b/actionflows/actionflows.html
@@ -300,7 +300,10 @@
         <input type="text" id="node-input-name" placeholder="Name">
     </div>
 </script>
-<script type="text/x-red" data-help-name="actionflows"></script>
+<script type="text/x-red" data-help-name="actionflows">
+<div style="font-size: 75%;text-align: right;font-style: italic;margin-bottom: -8px;">
+<a href="https://github.com/Steveorevo/node-red-contrib-actionflows/blob/master/README.md#node-red-contrib-actionflows" target="_blank">ActionFlows Docs</a></div>
+</script>
 <script type="text/x-red" data-help-name="actionflows_in">
   <p>Use the <code>action in</code> node to define the start
   of a flow segment.</p>
